--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Multiple PhotoSwipe galleries on pagea</title>
   
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.css'>
@@ -13,7 +12,7 @@
   
 </head>
 
-<body>
+<body background="https://lh3.googleusercontent.com/mA5sLbrzo7VX1Dqhg0DjM0zVqajhsuPLOzeMvdhNmEeOf89gHSjeEw2VJWeWomvGyZWMq4G1sk-Gb7bzxzdO0MBl8JztUfyCUaIHMWXca-TWYPJ9ed3yA9NP">
 
   <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 
