--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 <body background="https://lh3.googleusercontent.com/mA5sLbrzo7VX1Dqhg0DjM0zVqajhsuPLOzeMvdhNmEeOf89gHSjeEw2VJWeWomvGyZWMq4G1sk-Gb7bzxzdO0MBl8JztUfyCUaIHMWXca-TWYPJ9ed3yA9NP">
 
-<table align="center" width="100%"><tr>
-  <td>
-<img src="https://lh3.googleusercontent.com/ShMvKJknOpKkiIGbaALIsMVfRVI2VS9jmcGe_wRfE1RTuzFPwKNNMAUQb4bryBSvArRZOJ1_9FdGPHQFttPKw-gwuDxBtPAYscPxDC067k4Yauv3b9sF5JQuxxTFFb4bCuFWzVtDIcSsVE9n01fCFUQDNL6pz5BPDviuEC-DsLp65xGRUT5t0NhtjPtLFRaAr-ZXaPWh_jXao6ex9cq-O0Zr4XEejyFWNGYX9vQdw6CDN8HV6t7-qlZMBAuuJ-5Btzvep-LeiHcMHOPOLGrgqS4o403-EmiMRi5jeN4j2ZE6e-k4pMQLJRxa3n21X4Z40Z6RGlhr4h3e7AB6fGJqdrCn-P--epqRvaFhNY1fS2qeDPHmIQ8QytaJu9KLOOi2DrkfVkXMl_JxP_LW5qTHT6FMLw15MeDQQmUq0jimdaDYyUrOG4ALiGiJjdoqnKL_y01oKIXu0hVT1frkRltli5oiUNHFKpRmQAC2MOn2INNwnb2wvU0kJ2GaaA2fbEgVRsUznp1YR-015EbhgxBkJ5cl9ExI8m41iezaaUyvH7ZMfAELPoz_yRxh3BWa1QvNmGOvCMfTOcaOeP4oJZKG-g82BUaEqs3mT20LH2LU0xcWq75qBVrE=w529-h768-no" height="20"> DJ ViNOSH</td></tr></table>
+<img src="https://lh3.googleusercontent.com/ShMvKJknOpKkiIGbaALIsMVfRVI2VS9jmcGe_wRfE1RTuzFPwKNNMAUQb4bryBSvArRZOJ1_9FdGPHQFttPKw-gwuDxBtPAYscPxDC067k4Yauv3b9sF5JQuxxTFFb4bCuFWzVtDIcSsVE9n01fCFUQDNL6pz5BPDviuEC-DsLp65xGRUT5t0NhtjPtLFRaAr-ZXaPWh_jXao6ex9cq-O0Zr4XEejyFWNGYX9vQdw6CDN8HV6t7-qlZMBAuuJ-5Btzvep-LeiHcMHOPOLGrgqS4o403-EmiMRi5jeN4j2ZE6e-k4pMQLJRxa3n21X4Z40Z6RGlhr4h3e7AB6fGJqdrCn-P--epqRvaFhNY1fS2qeDPHmIQ8QytaJu9KLOOi2DrkfVkXMl_JxP_LW5qTHT6FMLw15MeDQQmUq0jimdaDYyUrOG4ALiGiJjdoqnKL_y01oKIXu0hVT1frkRltli5oiUNHFKpRmQAC2MOn2INNwnb2wvU0kJ2GaaA2fbEgVRsUznp1YR-015EbhgxBkJ5cl9ExI8m41iezaaUyvH7ZMfAELPoz_yRxh3BWa1QvNmGOvCMfTOcaOeP4oJZKG-g82BUaEqs3mT20LH2LU0xcWq75qBVrE=w529-h768-no" height="20"> DJ ViNOSH
 
   <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 
